# JAFDecs

./: README.md  README.rst  setup.cfg
samples/: function-value-initializer.py  private-member-initialization.py
src/dankdecorators/: privatemember.py
src/jafdecs/: __init__.py  initialize.py  utilities.py  worm.py
tests/regression/: test_0002_classmethod_object_not_callable.py
