[metadata]
name = dankdecorators
version = attr: dankdecorators.VERSION
author = Doug McGeehan
author_email = doug@kmnr.org
description = A few useful Python 3 decorators.
long_description = file: README.md
keywords = decorators
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7

[options.packages.find]
where=src
